Projeto/Compilador/tests/cases/error/T28.pas
program T28;
procedure P(x: integer; y: integer);
begin
end;
begin
  P(1);
end.
